100% покрытие тестами главного сервиса и главного контроллера приложения